fix(dashboard): fixed overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,7 @@
 .p-checkbox::after {
     border-color: #000000;
 }
+
+body {
+    overflow-x: hidden;
+}
